# Operating_Systems

lab_1/: CMakeLists.txt  Makefile  update_and_build.cmd  update_and_build.sh
lab_1/include/: farewell.hpp  greeter.hpp
lab_1/src/: farewell.cpp  greeter.cpp  main.cpp
lab_2/: CMakeLists.txt  Makefile
lab_2/include/: run_program.hpp
lab_2/src/: main.cpp  run_program.cpp
lab_3/: CMakeLists.txt  Makefile
lab_3/include/: logger.hpp  master.hpp  worker.hpp
lab_3/src/: logger.cpp  main.cpp  master.cpp  worker.cpp
lab_4/: CMakeLists.txt  Makefile
lab_4/include/: logger.hpp  serial_reader.hpp  simulator.hpp  temperature_reader.hpp
lab_4/src/: logger.cpp  main.cpp  serial_reader.cpp  simulator.cpp  temperature_reader.cpp
